--- a/3_keras_mnist.ipynb
+++ b/3_keras_mnist.ipynb
@@ -107,62 +107,62 @@
           "name": "stdout",
           "text": [
             "5\n",
-            "[[  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
-            "    0   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
-            "    0   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
-            "    0   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
-            "    0   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
-            "    0   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0   0   0   3  18  18  18 126 136\n",
-            "  175  26 166 255 247 127   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0  30  36  94 154 170 253 253 253 253 253\n",
-            "  225 172 253 242 195  64   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0  49 238 253 253 253 253 253 253 253 253 251\n",
-            "   93  82  82  56  39   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0  18 219 253 253 253 253 253 198 182 247 241\n",
-            "    0   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0  80 156 107 253 253 205  11   0  43 154\n",
-            "    0   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0  14   1 154 253  90   0   0   0   0\n",
-            "    0   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0   0 139 253 190   2   0   0   0\n",
-            "    0   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0   0  11 190 253  70   0   0   0\n",
-            "    0   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0   0   0  35 241 225 160 108   1\n",
-            "    0   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0   0   0   0  81 240 253 253 119\n",
-            "   25   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0  45 186 253 253\n",
-            "  150  27   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0  16  93 252\n",
-            "  253 187   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0 249\n",
-            "  253 249  64   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0  46 130 183 253\n",
-            "  253 207   2   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0   0   0  39 148 229 253 253 253\n",
-            "  250 182   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0  24 114 221 253 253 253 253 201\n",
-            "   78   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0  23  66 213 253 253 253 253 198  81   2\n",
-            "    0   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0  18 171 219 253 253 253 253 195  80   9   0   0\n",
-            "    0   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0  55 172 226 253 253 253 253 244 133  11   0   0   0   0\n",
-            "    0   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0 136 253 253 253 212 135 132  16   0   0   0   0   0   0\n",
-            "    0   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
-            "    0   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
-            "    0   0   0   0   0   0   0   0   0   0]\n",
-            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
-            "    0   0   0   0   0   0   0   0   0   0]]\n"
+           "[[  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+    "0   0   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+    "0   0   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+    "0   0   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+    "0   0   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+    "0   0   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0   0   0   0   0   3  18  18  18 126 136\n",
+  "175  26 166 255 247 127   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0  30  36  94 154 170 253 253 253 253 253\n",
+  "225 172 253 242 195  64   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0  49 238 253 253 253 253 253 253 253 253 251\n",
+   "93  82  82  56  39   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0  18 219 253 253 253 253 253 198 182 247 241\n",
+    "0   0   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0  80 156 107 253 253 205  11   0  43 154\n",
+    "0   0   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0   0  14   1 154 253  90   0   0   0   0\n",
+    "0   0   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0   0   0   0 139 253 190   2   0   0   0\n",
+    "0   0   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0   0   0   0  11 190 253  70   0   0   0\n",
+    "0   0   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0   0   0   0   0  35 241 225 160 108   1\n",
+    "0   0   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0   0   0   0   0   0  81 240 253 253 119\n",
+   "25   0   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0   0   0   0   0   0   0  45 186 253 253\n",
+  "150  27   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0  16  93 252\n",
+  "253 187   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0 249\n",
+  "253 249  64   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0   0   0   0   0   0   0  46 130 183 253\n",
+  "253 207   2   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0   0   0   0   0  39 148 229 253 253 253\n",
+  "250 182   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0   0   0  24 114 221 253 253 253 253 201\n",
+   "78   0   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0  23  66 213 253 253 253 253 198  81   2\n",
+    "0   0   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0  18 171 219 253 253 253 253 195  80   9   0   0\n",
+    "0   0   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0  55 172 226 253 253 253 253 244 133  11   0   0   0   0\n",
+    "0   0   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0 136 253 253 253 212 135 132  16   0   0   0   0   0   0\n",
+    "0   0   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+    "0   0   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+    "0   0   0   0   0   0   0   0   0   0]\n",
+ "[  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+    "0   0   0   0   0   0   0   0   0   0]]\n",
           ]
         }
       ]
@@ -232,48 +232,49 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/20\n",
-            "118/118 [==============================] - 8s 6ms/step - loss: 6.6168 - accuracy: 0.3339\n",
-            "Epoch 2/20\n",
-            "118/118 [==============================] - 1s 6ms/step - loss: 1.0995 - accuracy: 0.7135\n",
-            "Epoch 3/20\n",
-            "118/118 [==============================] - 1s 7ms/step - loss: 0.7904 - accuracy: 0.8069\n",
-            "Epoch 4/20\n",
-            "118/118 [==============================] - 1s 7ms/step - loss: 0.6363 - accuracy: 0.8471\n",
-            "Epoch 5/20\n",
-            "118/118 [==============================] - 1s 6ms/step - loss: 0.5263 - accuracy: 0.8725\n",
-            "Epoch 6/20\n",
-            "118/118 [==============================] - 1s 6ms/step - loss: 0.4557 - accuracy: 0.8856\n",
-            "Epoch 7/20\n",
-            "118/118 [==============================] - 1s 12ms/step - loss: 0.3942 - accuracy: 0.8975\n",
-            "Epoch 8/20\n",
-            "118/118 [==============================] - 1s 10ms/step - loss: 0.3528 - accuracy: 0.9053\n",
-            "Epoch 9/20\n",
-            "118/118 [==============================] - 1s 8ms/step - loss: 0.3148 - accuracy: 0.9122\n",
-            "Epoch 10/20\n",
-            "118/118 [==============================] - 1s 6ms/step - loss: 0.2978 - accuracy: 0.9171\n",
-            "Epoch 11/20\n",
-            "118/118 [==============================] - 1s 6ms/step - loss: 0.2767 - accuracy: 0.9228\n",
-            "Epoch 12/20\n",
-            "118/118 [==============================] - 1s 5ms/step - loss: 0.2597 - accuracy: 0.9267\n",
-            "Epoch 13/20\n",
-            "118/118 [==============================] - 1s 7ms/step - loss: 0.2475 - accuracy: 0.9292\n",
-            "Epoch 14/20\n",
-            "118/118 [==============================] - 1s 6ms/step - loss: 0.2369 - accuracy: 0.9318\n",
-            "Epoch 15/20\n",
-            "118/118 [==============================] - 1s 6ms/step - loss: 0.2274 - accuracy: 0.9353\n",
-            "Epoch 16/20\n",
-            "118/118 [==============================] - 1s 6ms/step - loss: 0.2189 - accuracy: 0.9370\n",
-            "Epoch 17/20\n",
-            "118/118 [==============================] - 0s 4ms/step - loss: 0.2150 - accuracy: 0.9389\n",
-            "Epoch 18/20\n",
-            "118/118 [==============================] - 0s 3ms/step - loss: 0.2087 - accuracy: 0.9398\n",
-            "Epoch 19/20\n",
-            "118/118 [==============================] - 0s 3ms/step - loss: 0.2038 - accuracy: 0.9418\n",
-            "Epoch 20/20\n",
-            "118/118 [==============================] - 0s 3ms/step - loss: 0.1945 - accuracy: 0.9435\n",
-            "313/313 [==============================] - 1s 3ms/step - loss: 0.2882 - accuracy: 0.9322\n",
-            "0.932200014591217\n"
+           "Epoch 1/20\n",
+"118/118 ━━━━━━━━━━━━━━━━━━━━ 3s 8ms/step - accuracy: 0.3840 - loss: 21.4614\n",
+"poch 2/20\n",
+"118/118 ━━━━━━━━━━━━━━━━━━━━ 0s 2ms/step - accuracy: 0.6141 - loss: 1.0167\n",
+"Epoch 3/20\n",
+"118/118 ━━━━━━━━━━━━━━━━━━━━ 0s 2ms/step - accuracy: 0.6520 - loss: 0.7873\n",
+"Epoch 4/20\n",
+"118/118 ━━━━━━━━━━━━━━━━━━━━ 1s 2ms/step - accuracy: 0.6606 - loss: 0.5827\n",
+"Epoch 5/20\n",
+"118/118 ━━━━━━━━━━━━━━━━━━━━ 0s 3ms/step - accuracy: 0.6686 - loss: 0.4860\n",
+"Epoch 6/20\n",
+"118/118 ━━━━━━━━━━━━━━━━━━━━ 0s 2ms/step - accuracy: 0.6706 - loss: 0.4079\n",
+"Epoch 7/20\n",
+"118/118 ━━━━━━━━━━━━━━━━━━━━ 0s 2ms/step - accuracy: 0.6719 - loss: 0.3617\n",
+"Epoch 8/20\n",
+"118/118 ━━━━━━━━━━━━━━━━━━━━ 0s 2ms/step - accuracy: 0.6710 - loss: 0.3289\n",
+"Epoch 9/20\n",
+"118/118 ━━━━━━━━━━━━━━━━━━━━ 0s 2ms/step - accuracy: 0.6850 - loss: 0.2940\n",
+"Epoch 10/20\n",
+"118/118 ━━━━━━━━━━━━━━━━━━━━ 0s 2ms/step - accuracy: 0.6861 - loss: 0.2632\n",
+"Epoch 11/20\n",
+"118/118 ━━━━━━━━━━━━━━━━━━━━ 0s 2ms/step - accuracy: 0.6915 - loss: 0.2349\n",
+"Epoch 12/20\n",
+"118/118 ━━━━━━━━━━━━━━━━━━━━ 0s 2ms/step - accuracy: 0.6919 - loss: 0.2295\n",
+"Epoch 13/20\n",
+"118/118 ━━━━━━━━━━━━━━━━━━━━ 0s 2ms/step - accuracy: 0.6950 - loss: 0.2069\n",
+"Epoch 14/20\n",
+"118/118 ━━━━━━━━━━━━━━━━━━━━ 0s 2ms/step - accuracy: 0.6921 - loss: 0.1985\n",
+"Epoch 15/20\n",
+"118/118 ━━━━━━━━━━━━━━━━━━━━ 0s 2ms/step - accuracy: 0.6890 - loss: 0.1910\n",
+"Epoch 16/20\n",
+"118/118 ━━━━━━━━━━━━━━━━━━━━ 0s 2ms/step - accuracy: 0.6972 - loss: 0.1822\n",
+"Epoch 17/20\n",
+"118/118 ━━━━━━━━━━━━━━━━━━━━ 0s 2ms/step - accuracy: 0.7028 - loss: 0.1727\n",
+"Epoch 18/20\n",
+"118/118 ━━━━━━━━━━━━━━━━━━━━ 0s 2ms/step - accuracy: 0.7032 - loss: 0.1702\n",
+"Epoch 19/20\n",
+"118/118 ━━━━━━━━━━━━━━━━━━━━ 0s 2ms/step - accuracy: 0.7196 - loss: 0.1665\n",
+"Epoch 20/20\n",
+"118/118 ━━━━━━━━━━━━━━━━━━━━ 0s 2ms/step - accuracy: 0.7210 - loss: 0.1592\n",
+"313/313 ━━━━━━━━━━━━━━━━━━━━ 1s 3ms/step - accuracy: 0.7112 - loss: 0.3516\n",
+"0.7189000248908997\n",
+
           ]
         }
       ]
