--- a/3_keras_mnist.ipynb
+++ b/3_keras_mnist.ipynb
@@ -40,7 +40,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "R5cACOrFSnqH",
-        "outputId": "95a85ec0-7ab5-4528-8dc8-8d5260828a84"
+        "outputId": "fea12b63-8f50-42b8-afe2-f44a40b4021c"
       },
       "execution_count": 2,
       "outputs": [
@@ -49,7 +49,7 @@
           "name": "stdout",
           "text": [
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-            "11490434/11490434 [==============================] - 2s 0us/step\n"
+            "\u001b[1m11490434/11490434\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n"
           ]
         }
       ]
@@ -69,7 +69,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EFQs0fgIS7i7",
-        "outputId": "66c11f9e-1ede-477f-deff-411a6226f905"
+        "outputId": "5a39c39f-669e-431d-92bc-0a1fd9a506bc"
       },
       "execution_count": 3,
       "outputs": [
@@ -98,7 +98,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8ly_pcPqS-zs",
-        "outputId": "46d7791d-fa1f-4b83-8004-eb2c7f48ef32"
+        "outputId": "872f1792-9c58-4461-8306-0dbeec83deed"
       },
       "execution_count": 4,
       "outputs": [
@@ -180,7 +180,7 @@
           "height": 430
         },
         "id": "jZ0YkEcgTBlg",
-        "outputId": "8819c61f-4b15-47aa-fecc-f0e1d5b0dcb3"
+        "outputId": "6c370660-1557-440f-a153-753e7619ff87"
       },
       "execution_count": 5,
       "outputs": [
@@ -206,10 +206,23 @@
         "model.compile(optimizer='rmsprop', loss='sparse_categorical_crossentropy', metrics=['accuracy'])"
       ],
       "metadata": {
-        "id": "oGn_mtiuTEqg"
+        "id": "oGn_mtiuTEqg",
+        "outputId": "2a69231e-7abc-4bcd-9e91-2ea77aa63ce2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": 6,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/keras/src/layers/core/dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+            "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -224,7 +237,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P4vxIy0iTH2_",
-        "outputId": "0db37f96-2bfa-4e21-919b-124ab67530a0"
+        "outputId": "4e076b22-7bf9-46a9-f61e-76ec60ee273d"
       },
       "execution_count": 7,
       "outputs": [
@@ -233,47 +246,47 @@
           "name": "stdout",
           "text": [
             "Epoch 1/20\n",
-            "118/118 [==============================] - 8s 6ms/step - loss: 6.6168 - accuracy: 0.3339\n",
+            "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 10ms/step - accuracy: 0.3038 - loss: 20.3551\n",
             "Epoch 2/20\n",
-            "118/118 [==============================] - 1s 6ms/step - loss: 1.0995 - accuracy: 0.7135\n",
+            "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2ms/step - accuracy: 0.4714 - loss: 1.0570\n",
             "Epoch 3/20\n",
-            "118/118 [==============================] - 1s 7ms/step - loss: 0.7904 - accuracy: 0.8069\n",
+            "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.4977 - loss: 0.6858\n",
             "Epoch 4/20\n",
-            "118/118 [==============================] - 1s 7ms/step - loss: 0.6363 - accuracy: 0.8471\n",
+            "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.4944 - loss: 0.5395\n",
             "Epoch 5/20\n",
-            "118/118 [==============================] - 1s 6ms/step - loss: 0.5263 - accuracy: 0.8725\n",
+            "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.4978 - loss: 0.4539\n",
             "Epoch 6/20\n",
-            "118/118 [==============================] - 1s 6ms/step - loss: 0.4557 - accuracy: 0.8856\n",
+            "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.4969 - loss: 0.3967\n",
             "Epoch 7/20\n",
-            "118/118 [==============================] - 1s 12ms/step - loss: 0.3942 - accuracy: 0.8975\n",
+            "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.4921 - loss: 0.3505\n",
             "Epoch 8/20\n",
-            "118/118 [==============================] - 1s 10ms/step - loss: 0.3528 - accuracy: 0.9053\n",
+            "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.4768 - loss: 0.3244\n",
             "Epoch 9/20\n",
-            "118/118 [==============================] - 1s 8ms/step - loss: 0.3148 - accuracy: 0.9122\n",
+            "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.4631 - loss: 0.2956\n",
             "Epoch 10/20\n",
-            "118/118 [==============================] - 1s 6ms/step - loss: 0.2978 - accuracy: 0.9171\n",
+            "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.4450 - loss: 0.2656\n",
             "Epoch 11/20\n",
-            "118/118 [==============================] - 1s 6ms/step - loss: 0.2767 - accuracy: 0.9228\n",
+            "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.4370 - loss: 0.2482\n",
             "Epoch 12/20\n",
-            "118/118 [==============================] - 1s 5ms/step - loss: 0.2597 - accuracy: 0.9267\n",
+            "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.4083 - loss: 0.2181\n",
             "Epoch 13/20\n",
-            "118/118 [==============================] - 1s 7ms/step - loss: 0.2475 - accuracy: 0.9292\n",
+            "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.3730 - loss: 0.2071\n",
             "Epoch 14/20\n",
-            "118/118 [==============================] - 1s 6ms/step - loss: 0.2369 - accuracy: 0.9318\n",
+            "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.3550 - loss: 0.1893\n",
             "Epoch 15/20\n",
-            "118/118 [==============================] - 1s 6ms/step - loss: 0.2274 - accuracy: 0.9353\n",
+            "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.3382 - loss: 0.1848\n",
             "Epoch 16/20\n",
-            "118/118 [==============================] - 1s 6ms/step - loss: 0.2189 - accuracy: 0.9370\n",
+            "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.3186 - loss: 0.1737\n",
             "Epoch 17/20\n",
-            "118/118 [==============================] - 0s 4ms/step - loss: 0.2150 - accuracy: 0.9389\n",
+            "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.3089 - loss: 0.1631\n",
             "Epoch 18/20\n",
-            "118/118 [==============================] - 0s 3ms/step - loss: 0.2087 - accuracy: 0.9398\n",
+            "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.3083 - loss: 0.1502\n",
             "Epoch 19/20\n",
-            "118/118 [==============================] - 0s 3ms/step - loss: 0.2038 - accuracy: 0.9418\n",
+            "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.2920 - loss: 0.1498\n",
             "Epoch 20/20\n",
-            "118/118 [==============================] - 0s 3ms/step - loss: 0.1945 - accuracy: 0.9435\n",
-            "313/313 [==============================] - 1s 3ms/step - loss: 0.2882 - accuracy: 0.9322\n",
-            "0.932200014591217\n"
+            "\u001b[1m118/118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.2898 - loss: 0.1502\n",
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.2886 - loss: 0.3363\n",
+            "0.28790000081062317\n"
           ]
         }
       ]
